Add ChallengeModifiers to BingoGame class